--- a/ci4/public/admin.css
+++ b/ci4/public/admin.css
@@ -32,7 +32,7 @@ header h1 {
 
 /* navigasi */
 nav {
-    background-color: #9b1919;
+    background-color: #FF8C00;
     height:50px;
     line-height:50px;
     position:relative;
@@ -51,7 +51,7 @@ nav ul li a {
 }
 nav ul li a.active,
 nav ul li a:hover {
-    background-color: #b13b3b;
+    background-color: rgb(255,69,0);
     display:block;
 }
 
@@ -62,7 +62,7 @@ nav ul .sub1 {
     position:absolute;
     left:300px;
     top:50px;
-    background-color: #b13b3b;
+    background-color: #FF8C00;
 }
 .sub1 a:hover { color:#fff }
 
@@ -72,7 +72,7 @@ nav ul .sub2 {
     position:absolute;
     left:150px;
     top:50px;
-    background-color: #b13b3b;
+    background-color: #FF8C00;
 }
 .sub2 a:hover { color:#fff }
 
@@ -82,7 +82,7 @@ nav ul .sub3 {
     position:absolute;
     left:0px;
     top:50px;
-    background-color: #b13b3b;
+    background-color: #FF8C00;
 }
 .sub3 a:hover { color:#fff }
 
@@ -120,7 +120,7 @@ table td{
     padding: 10px 8px;
 }
 table th {
-    background: #9b1919;
+    background: #FF8C00;
     color:#ffffff;
     font-size: 17px;
     text-align: left;
@@ -138,7 +138,7 @@ tr:hover{
 /* ADMIN TOMBOL */
 .btn{
     font-size: 14px;
-    background-color: #9b1919;
+    background-color: rgb(255,69,0);
     color: #ffffff;
     border-radius: 5px;
     padding: 10px 20px;
@@ -190,7 +190,7 @@ input[type=text]{
 
 .btn-large{
     padding: 7px 10px;
-    background-color: #9b1919;
+    background-color: rgb(255,69,0);
     color: white;
     font-size: 15px;
     margin: 20px;
@@ -200,7 +200,7 @@ input[type=text]{
 
 .btn-back{
     padding: 10px;
-    background-color: #9b1919;
+    background-color: rgb(255,69,0);
     color: white;
     box-sizing: border-box;
     font-size: 15px;
